fixed card preview being too high

--- a/src/components/CardsList/CardsList.module.css
+++ b/src/components/CardsList/CardsList.module.css
@@ -56,6 +56,7 @@
     display: flex;
     gap: 10px;
     flex-direction: column;
+    margin-top: 60px;
 }
 
 .cardsListContainer {
@@ -64,6 +65,7 @@
 
 @media (max-width: 690px) {
     .cardDetails {
+        margin-top: 0px;
         flex-direction: row;
         justify-content: center;
     }
